# solidworks_mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  test_batch_real_decrypted_parts.py  test_dimension_generation.py  test_drawing_layout_fit.py  test_drawing_review.py  test_e2e_prismatic_dimension.py  test_existing_model_geometry_profile.py  test_external_mcp_adoption_catalog.py  test_infrared_guard_drawing.py  test_solidworks_drawing_payload.py
docs/: AGENTS.md  external-mcp-adoption.md  mcp-client-config.md  protocol-catalog.md
docs/analysis/: solidworks-api-expansion-report.md
examples/: AGENTS.md  bom_assembly_plan.json  bracket_plan.json  center_hole_plate_plan.json  end_cap_plan.json  flange_plan.json  mounting_block_plan.json  mounting_plate_plan.json  shaft_plan.json  sheet_metal_base_flange_plan.json  simulation_cantilever_plan.json  sleeve_plan.json  slotted_array_plate_plan.json  washer_plan.json  weldment_frame_plan.json
scripts/: AGENTS.md  batch_real_decrypted_parts.py  check_atomic_model_session.py  check_existing_model_drawing_gate.py  check_existing_model_manufacturing_drawing_gate.py  check_mcp_tool_schemas.py  check_mounting_plate_schema.py  cleanup_run_documents.py  diagnose_release_gate.py  diagnose_run.py  diagnose_runs.py  release_production_gate.py  smoke_mounting_plate.py  smoke_production_workflows.py
src/solidworks_mcp/: AGENTS.md  __init__.py  __main__.py  capabilities.py  config.py  debug.py  decrypted_parts_batch.py  decrypted_parts_plan.py  decrypted_parts_process.py  drawing_layout_fit.py  drawing_recipe.py  drawing_review.py  (+11 more)
(+5 files in other folders)
